gixed about background color; fixed scrollbar and pointer for main page

--- a/about/main/main.css
+++ b/about/main/main.css
@@ -1,4 +1,11 @@
-/** fixTranscript/main/main.css **/
+/** fixTranscript/about/main/main.css **/
+
+:root {
+  --bgColor:     white;
+  --fgColor:     var(--darkGreen);
+  --scrollWidth: 1.25rem;
+}
+
 
 html {
   display: flex;
@@ -11,8 +18,8 @@ html {
 
 body {
   animation: fadeUpAnim 1s ease-in-out 0.2s forwards;
-  background: var(--green);
-  color: white;
+  background: var(--bgColor);
+  color: var(--fgColor);
   display: flex;
   flex-direction: column;
   font-family: notoSans, arial;
@@ -132,6 +139,7 @@ ol {
 }
 
 .logoText {
+  color: var(--darkGreen);
   font-family: lobsterTwo, notoSansExtraLight, arial;
   font-size: 3rem;
 }
@@ -174,14 +182,20 @@ ol {
 }
 
 .mainContainer::-webkit-scrollbar {
-  width: 1.25rem;
+  width: var(--scrollWidth);
 }
 
 .mainContainer::-webkit-scrollbar-track {
   background: var(--darkGreen);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background: rgb(190, 225, 195);
+  box-shadow: inset 0 0 0.5rem rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+
 }
 
 .mainContainer::-webkit-scrollbar-thumb {
   background-color: var(--lightGreen);
+  border-radius: 1rem;
+  background: rgb(120, 180, 130);
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
 }
